--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyCbMBoTxM9vNOQMR0AESyjZ4UHcUd8D1M8",
+      authDomain: "mesarpg-69127.firebaseapp.com",
+      projectId: "mesarpg-69127",
+      storageBucket: "mesarpg-69127.appspot.com",
+      messagingSenderId: "261128652241",
+      appId: "1:261128652241:web:b8a854e054e44f1b844cf0"
     };
-
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
